@@ -1,44 +1,44 @@
 package in.codemonks.util;
 
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.MediaType;
+
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.util.Map;
 
 public class HttpUtils {
 
-    private static final HttpClient CLIENT = HttpClient.newHttpClient();
+    private static final ObjectMapper MAPPER = new ObjectMapper();
 
-    public static String post(String url, String jsonBody) throws Exception {
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(url))
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(jsonBody))
-                .build();
+    public static void post(String urlStr, Map<String, Object> body) throws Exception {
+        URL url = new URL(urlStr);
+        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        conn.setRequestMethod("POST");
+        conn.setDoOutput(true);
+        conn.setRequestProperty(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE);
 
-        HttpResponse<String> response = CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
-
-        int status = response.statusCode();
-        if (status >= 200 && status < 300) {
-            return response.body();
-        } else {
-            throw new RuntimeException("HTTP POST failed: " + status + " - " + response.body());
+        try (OutputStream os = conn.getOutputStream()) {
+            os.write(MAPPER.writeValueAsBytes(body));
         }
+
+        int code = conn.getResponseCode();
+        if (code >= 400) throw new RuntimeException("HTTP POST failed with code " + code);
     }
 
-    public static String get(String url) throws Exception {
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(url))
-                .GET()
-                .build();
+    public static Map<?, ?> postJson(String urlStr, Map<String, Object> body) throws Exception {
+        URL url = new URL(urlStr);
+        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        conn.setRequestMethod("POST");
+        conn.setDoOutput(true);
+        conn.setRequestProperty(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE);
 
-        HttpResponse<String> response = CLIENT.send(request, HttpResponse.BodyHandlers.ofString());
-
-        int status = response.statusCode();
-        if (status >= 200 && status < 300) {
-            return response.body();
-        } else {
-            throw new RuntimeException("HTTP GET failed: " + status + " - " + response.body());
+        try (OutputStream os = conn.getOutputStream()) {
+            os.write(MAPPER.writeValueAsBytes(body));
         }
+
+        return MAPPER.readValue(conn.getInputStream(), Map.class);
     }
 }
